force-app/main/default/objects/PP_PartnershipOpportunity__c/PP_PartnershipOpportunity__c.object-meta.xml
<CustomObject>
    <description>SFP-5726 - Partnership Opportunity - Represents partnership opportunities that partners can apply for.</description>
    <label>Partnership Opportunity</label>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partnership Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>