force-app/main/default/objects/PP_PartnershipOpportunity__c/fields/PP_Content__c.field-meta.xml
<CustomField>
    <fullName>PP_Content__c</fullName>
    <description>SFP-5726 - Main description and content of the opportunity.</description>
    <inlineHelpText>Main description and content of the opportunity.</inlineHelpText>
    <label>Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>