force-app/main/default/objects/PP_PartnershipOpportunity__c/fields/PP_Country__c.field-meta.xml
<CustomField>
    <fullName>PP_Country__c</fullName>
    <description>SFP-5726 - Countries this opportunity is targeted for.</description>
    <inlineHelpText>Countries this opportunity is targeted for.</inlineHelpText>
    <label>Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>