force-app/main/default/objects/PP_PartnershipOpportunity__c/fields/PP_Featured__c.field-meta.xml
<CustomField>
    <fullName>PP_Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFP-5726 - Makes this a featured opportunity and displayed on the feature section in the community.</description>
    <inlineHelpText>Makes this a featured opportunity and displayed on the feature section in the community.</inlineHelpText>
    <label>Featured</label>
    <type>Checkbox</type>
</CustomField>