force-app/main/default/objects/PP_PartnershipOpportunity__c/fields/PP_Image__c.field-meta.xml
<CustomField>
    <fullName>PP_Image__c</fullName>
    <description>SFP-5726 - Image to use for opportunity listing in community.</description>
    <inlineHelpText>Image to use for opportunity listing in community.</inlineHelpText>
    <label>Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>