force-app/main/default/objects/PP_PartnershipOpportunity__c/fields/PP_Industry__c.field-meta.xml
<CustomField>
    <fullName>PP_Industry__c</fullName>
    <description>SFP-5726 - Industries this opportunity is targeted for.</description>
    <inlineHelpText>Industries this opportunity is targeted for.</inlineHelpText>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industries</valueSetName>
    </valueSet>
</CustomField>