force-app/main/default/objects/PP_PartnershipOpportunity__c/fields/PP_PublishEndDate__c.field-meta.xml
<CustomField>
    <fullName>PP_PublishEndDate__c</fullName>
    <description>SFP-5726 - When should the opportunity be removed from the listing on the community.</description>
    <inlineHelpText>When should the opportunity be removed from the listing on the community.</inlineHelpText>
    <label>Publish End Date</label>
    <type>Date</type>
</CustomField>