force-app/main/default/objects/PP_PartnershipOpportunity__c/fields/PP_PublishStartDate__c.field-meta.xml
<CustomField>
    <fullName>PP_PublishStartDate__c</fullName>
    <description>SFP-5726 - When should the opportunity start showing in the listing on the community.</description>
    <inlineHelpText>When should the opportunity start showing in the listing on the community.</inlineHelpText>
    <label>Publish Start Date</label>
    <type>Date</type>
</CustomField>