force-app/main/default/objects/PP_PartnershipOpportunity__c/fields/PP_Status__c.field-meta.xml
<CustomField>
    <fullName>PP_Status__c</fullName>
    <description>SFP-5726 - Indicates the approval status of the partner opportunity item.</description>
    <inlineHelpText>Indicates the approval status of the partner opportunity item.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>