force-app/main/default/objects/PP_PartnershipOpportunity__c/fields/PP_Summary__c.field-meta.xml
<CustomField>
    <fullName>PP_Summary__c</fullName>
    <description>SFP-5726 - A short except of the opportunity.  Used for listings to describe an opportunity.</description>
    <inlineHelpText>A short except of the opportunity.  Used for listings to describe an opportunity.</inlineHelpText>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>