force-app/main/default/objects/PP_PartnershipOpportunity__c/recordTypes/Bank_Originated.recordType-meta.xml
<RecordType>
    <fullName>Bank_Originated</fullName>
    <active>true</active>
    <label>Bank Originated</label>
</RecordType>