force-app/main/default/objects/PP_PartnershipOpportunity__c/recordTypes/Partner_Originated.recordType-meta.xml
<RecordType>
    <fullName>Partner_Originated</fullName>
    <active>true</active>
    <label>Partner Originated</label>
</RecordType>