force-app/main/default/objects/PP_PartnershipOpportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PP_Status__c</columns>
    <columns>PP_Industry__c</columns>
    <columns>PP_Country__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>